# JupiterClient-SAN

./: CMakeLists.txt  resources.qrc
src/: main.cpp
src/config/: ConfigManager.cpp  ConfigManager.h
src/network/: NetworkManager.cpp  NetworkManager.h  Protocol.cpp  Protocol.h
src/ui/: ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  InvitationsDialog.cpp  InvitationsDialog.h  InvitationsDialog.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SearchDialog.cpp  SearchDialog.h  SearchDialog.ui
src/utils/: Logger.cpp  Logger.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_integration.cpp  test_jupiter.conf
tests/ui/: CMakeLists.txt  test_ui.cpp
tests/unit/: CMakeLists.txt  test_unit.cpp
