cmake_minimum_required(VERSION 3.16)

project(JupiterClient VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Network)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Network)

set(PROJECT_SOURCES
    src/main.cpp
    src/ui/LoginWindow.cpp
    src/ui/MainWindow.cpp
    src/ui/ChatWindow.cpp
    src/network/Client.cpp
    src/network/Protocol.cpp      # Dodaj Protocol.cpp
    src/models/User.cpp
    src/ui/LoginWindow.h
    src/ui/MainWindow.h
    src/ui/ChatWindow.h
    src/network/Client.h
    src/network/Protocol.h        # Dodaj Protocol.h
    src/models/User.h
    src/ui/LoginWindow.ui
    src/ui/MainWindow.ui
    src/ui/ChatWindow.ui
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(JupiterClient
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
else()
    if(ANDROID)
        add_library(JupiterClient SHARED
            ${PROJECT_SOURCES}
        )
    else()
        add_executable(JupiterClient
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(JupiterClient PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Network)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.JupiterClient)
endif()
set_target_properties(JupiterClient PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS JupiterClient
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

# Add the build directory to the include paths
target_include_directories(JupiterClient PRIVATE ${CMAKE_BINARY_DIR} src/network)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(JupiterClient)
endif()
